# agent-receipt-validator-mcp

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml
docs/: release-hygiene.md  reproducibility.md  software-architecture.md
examples/: basic-usage.md
scripts/: smoke_check.py
src/agent_receipt_validator_mcp/: __init__.py  server.py  tools.py
tests/: test_diagnostic_surface.py  test_package_metadata.py  test_smoke_check.py  test_tools.py
