[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-receipt-validator-mcp"
version = "0.1.1"
description = "MCP server for validating signed agent execution receipts."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "MIT"
authors = [
  { name = "Zhang Bin", email = "joy7759@gmail.com" },
]
dependencies = [
  "mcp",
  "verifiable-tool-invocation-flow==0.1.1",
  "pydantic",
]
keywords = [
  "mcp",
  "agent",
  "receipt",
  "validator",
  "execution-evidence",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
agent-receipt-validator-mcp = "agent_receipt_validator_mcp.server:main"

[project.urls]
Homepage = "https://github.com/joy7758/agent-receipt-validator-mcp"
Repository = "https://github.com/joy7758/agent-receipt-validator-mcp"
Issues = "https://github.com/joy7758/agent-receipt-validator-mcp/issues"
Core = "https://github.com/joy7758/verifiable-tool-invocation-flow"

[tool.setuptools.packages.find]
where = ["src"]
